# dc-shiftmaster-pro

./: .dockerignore  .env.example  .gitignore  DC-ShiftMaster-Pro.spec  DC-ShiftMaster-Web.bat  Dockerfile  TrainingScheduler.spec  app.py  data.json  export_methods.py  gunicorn.conf.py  inject_exports.py  package-lock.json  package.json  pyproject.toml  requirements-html.txt  requirements.txt  scheduler.py  teammates.db-shm  teammates.db-wal
dc_shiftmaster/: __init__.py  build.bat  compliance.py  csv_export.py  database.py  excel_export.py  generate_icon.py  ics_export.py  ics_parser.py  json_schedule_import.py  main.py  migration.py  models.py  requirements.txt  scheduling.py  validation.py
dc_shiftmaster_html/: __init__.py  __main__.py  broadcast.py  email_service.py  extensions.py  routes_auth.py  routes_coverage.py  routes_export.py  routes_ics.py  routes_import.py  routes_overrides.py  routes_profile.py  routes_schedule.py  routes_settings.py  routes_teammates.py  routes_tokens.py  server.py  team_middleware.py  token_service.py  ws_routes.py
dc_shiftmaster_web/: __init__.py  build_and_deploy.bat  build_and_deploy.sh  main.py  migration.py  storage.py  theme.py
docs/: deployment.md
expense_tracker/: build.bat  database.py  main.py  main.pyw  models.py  requirements.txt
tests/: __init__.py  conftest.py  test_api_routes.py  test_api_token_auth_props.py  test_api_token_db.py  test_api_token_integration.py  test_api_token_props.py  test_api_token_routes_props.py  test_api_token_routes_unit.py  test_api_tokens_schema.py  test_auth_routes.py  test_broadcast.py  (+53 more)
(+122 files in other folders)
