[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dc-shiftmaster"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.0",
    "tkcalendar>=1.6.1",
    "openpyxl>=3.1.0",
    "flet>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["dc_shiftmaster*"]
